Item2979: fixes overflowing content in print view
git-svn-id: http://develop.twiki.org/svn/twiki/branches/MAIN@11733 a00a5322-12db-0310-a70b-8735589c885e

--- a/twikiplugins/PatternSkin/pub/TWiki/PatternSkin/print.css
+++ b/twikiplugins/PatternSkin/pub/TWiki/PatternSkin/print.css
@@ -97,6 +97,10 @@
 	h2, h3, h4, h5, h6 {
 		background-color:transparent;
 	}
+	/* make sure that overflowing content is visible */
+	html>body pre { /* hide from IE */
+		/*\*/ overflow:visible !important; /* */ overflow:visible; width:auto; /* for Mac Safari */
+	}
 	.twikiAttachments,
 	.patternContent .twikiAttachments,
 	.twikiForm,
